Test/semantic_tests/error10_non_array_index.expected
Error type 10 at Line 4: Array indexing on non-array.
