Test/semantic_tests/error10_non_array_index.cmm
int main()
{
    int i;
    i[0] = 5;
    return 0;
}
